--- a/src/index.css
+++ b/src/index.css
@@ -199,41 +199,41 @@ html {
   border: 1rem solid rgba(0, 0, 0, 0.8);
 }
 
-.controls a {
+.controls button {
   position: absolute;
 }
 
-.controls a:nth-child(1) {
+.controls button:nth-child(1) {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
 }
 
-.controls a:nth-child(2) {
+.controls button:nth-child(2) {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
 }
 
-.controls a:nth-child(3) {
+.controls button:nth-child(3) {
   top: 50%;
   left: 0;
   transform: translateY(-50%);
 }
 
-.controls a:nth-child(4) {
+.controls button:nth-child(4) {
   top: 50%;
   right: 0;
   transform: translateY(-50%);
 }
 
-.controls a:nth-child(5) {
+.controls button:nth-child(5) {
   top: 10%;
   right: 10%;
   transform: rotate(45deg);
 }
 
-.controls a:nth-child(6) {
+.controls button:nth-child(6) {
   bottom: 10%;
   left: 10%;
   transform: rotate(45deg);
@@ -246,7 +246,7 @@ html {
   transition: opacity 0.5s;
 }
 
-.controls a:hover i {
+.controls button:hover i {
   opacity: 1;
 }
 /* End of Controls */
@@ -454,6 +454,330 @@ html {
 }
 /* End of Section 2 Buttons */
 /* End of Section 2 */
+
+/* Section 3 */
+.section-3 {
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-color);
+  flex-direction: column;
+  padding: 15rem 0;
+  clip-path: polygon(68% 0, 100% 0, 100% 97%, 38% 100%, 0 100%, 0 3%);
+}
+
+/* Section 3 Heading */
+.section-3-heading {
+  font-size: 10rem;
+  font-weight: 200;
+  color: var(--primary-color);
+  margin-bottom: 15rem;
+}
+/* End of Section 3 Heading */
+
+/* Section 3 Content */
+.section-3-content {
+  width: 80%;
+  flex-direction: column;
+  perspective: 1000rem;
+  position: relative;
+}
+
+/* Section 3 Images */
+.section-3-content img {
+  width: inherit;
+}
+
+.macbook-img-1 {
+  transform: rotateX(-80deg);
+  transform-origin: bottom;
+}
+
+.change .macbook-img-1 {
+  transform: rotateX(0);
+  transition: transform 3s;
+}
+/* End of Section 3 Images */
+
+/* Section 4 */
+.section-4 {
+  height: 140vh;
+  padding: 20vh 0;
+  flex-direction: column;
+  position: relative;
+}
+
+/* Section 4 Watches */
+.watches {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.watches > div {
+  position: absolute;
+}
+/* Watch Bands */
+.watch-bands {
+  transition: margin-right 1s;
+}
+
+.watch-band-img {
+  width: 35rem;
+  height: 35rem;
+  object-fit: contain;
+}
+/* End of Watch Bands */
+
+/* Watch Cases */
+.watch-cases {
+  flex-direction: column;
+  transition: margin-top 1s;
+}
+
+.watch-case-img {
+  width: 35rem;
+  height: 35rem;
+  object-fit: contain;
+}
+/* End of Watch Cases */
+/* End of Section 4 Watches */
+
+/* Watch Controls */
+.watch-control {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  background-color: rgba(221, 221, 221, 0.4);
+  border-radius: 5rem;
+}
+
+.hideControl {
+  opacity: 0;
+  visibility: hidden;
+}
+
+.watch-control i {
+  font-size: 3rem;
+  color: var(--primary-color);
+}
+
+.watch-top-control {
+  top: 22vh;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.watch-right-control {
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+}
+
+.watch-bottom-control {
+  left: 50%;
+  bottom: 20vh;
+  transform: translateX(-50%);
+}
+
+.watch-left-control {
+  top: 50%;
+  left: 2rem;
+  transform: translateY(-50%);
+}
+/* End of Watch Controls */
+
+/* Watch Button */
+.watch-btn {
+  position: absolute;
+  bottom: 30vh;
+  right: 35%;
+  width: 13rem;
+  height: 5rem;
+  background-color: var(--black-color);
+  color: var(--primary-color);
+  border: 0.1rem dashed var(--white-color);
+  border-radius: 4rem;
+  font-size: 1.6rem;
+  font-weight: 200;
+  cursor: pointer;
+}
+/* End of Watch Button */
+/* End of Section 4 */
+
+/* Section 3 Loading */
+.loading-wrapper {
+  position: absolute;
+  top: 6%;
+  width: 60%;
+  height: 85%;
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.6),
+      rgba(255, 255, 255, 0.6)
+    ),
+    url(/public/images/MacBook/macbook-1-desktop.png) center no-repeat;
+  z-index: -1;
+  opacity: 0;
+}
+
+.change .loading-wrapper {
+  opacity: 1;
+  transition: opacity 1s 2s;
+}
+
+.loading {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--black-color);
+  flex-direction: column;
+}
+
+.change .loading {
+  opacity: 0;
+  transition: 1s 5s;
+}
+
+.loading i {
+  font-size: 10rem;
+  color: var(--white-color);
+  margin-bottom: 2rem;
+}
+
+.progress-bar {
+  width: 22rem;
+  height: 0.3rem;
+  background-color: #888;
+  border-radius: 5rem;
+  position: relative;
+}
+
+.progress-bar::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background-color: var(--white-color);
+}
+
+.change .progress-bar::after {
+  width: 100%;
+  transition: width 1s 3s;
+}
+/* End of Section 3 Loading */
+
+/* Section 3 Info */
+.macbook-info {
+  position: absolute;
+  width: 70rem;
+  text-align: center;
+  opacity: 0;
+}
+
+.change .macbook-info {
+  opacity: 1;
+  transition: opacity 1s 6s;
+}
+
+.macbook-info-heading {
+  font-size: 6rem;
+  font-weight: 400;
+  color: var(--primary-color);
+}
+
+.macbook-price {
+  font-size: 2.5rem;
+  font-weight: 200;
+  margin: 3rem 0;
+}
+
+.macbook-btn {
+  width: 25rem;
+  height: 5rem;
+  background-image: linear-gradient(#ddd, #fff);
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: 0.1rem 0.1rem 0.1rem #fff, -0.1rem -0.1rem 0.1rem #fff;
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 0.2rem;
+  color: var(--primary-color);
+  cursor: pointer;
+}
+/* End of Section 3 Info */
+/* End of Section 3 Content */
+/*End of Section 3 */
+/* Section 5 */
+.section-5 {
+  width: 100%;
+  height: 100vh;
+}
+
+/* Section 5 Content */
+.airpods {
+  width: 90%;
+  height: 80%;
+  display: flex;
+  position: relative;
+}
+
+/* Section 5 Heading */
+.section-5-heading {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 15rem;
+  font-weight: 300;
+  color: var(--white-color);
+  text-shadow: 0.1rem 0.1rem 0 #999;
+}
+/* End of Section 5 Heading */
+
+/* Section 5 Images */
+.airpods img {
+  width: 50%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.airpods-img-2 {
+  background-color: var(--primary-color);
+}
+/* End of Section 5 Images */
+
+/* Section 5 Buttons */
+.airpods-buttons {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 5rem;
+}
+
+.airpods-btn {
+  width: 15rem;
+  height: 4rem;
+  background-color: var(--primary-color);
+  margin: 0 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  color: var(--white-color);
+  cursor: pointer;
+}
+
+.airpods-btn:last-child {
+  background-color: var(--white-color);
+  color: var(--primary-color);
+}
+/* End of Section 5 Buttons */
+/* End of Section 5 Content */
+/* End of Section 5 */
+
 /* Responsive */
 @media (max-width: 1500px) {
   html {
@@ -477,9 +801,28 @@ html {
   .section-1-banner p {
     font-size: 3rem;
   }
+
+  .watch-btn {
+    right: 25%;
+  }
 }
 
 @media (max-width: 900px) {
+  .section-3-content {
+    width: 90%;
+  }
+
+  .loading-wrapper {
+    width: 70%;
+  }
+
+  .loading i {
+    font-size: 6rem;
+  }
+
+  .section-5-heading {
+    font-size: 12rem;
+  }
 }
 
 @media (max-width: 700px) {
@@ -537,12 +880,84 @@ html {
     height: 70vh;
     width: 70vw;
   }
+
+  .watch-btn {
+    right: 15%;
+  }
+
+  .airpods-img-1 {
+    display: none;
+  }
+
+  .airpods .airpods-img-2 {
+    width: 100%;
+  }
+
+  .airpods-btn {
+    background-color: var(--white-color);
+    color: var(--primary-color);
+    box-shadow: 0.1rem 0.1rem 0.1rem #ddd;
+  }
+
+  .icon-link {
+    margin: 0 2rem;
+  }
 }
 
 @media (max-width: 550px) {
   .navbar-link {
     margin: 0 1.5rem;
   }
+
+  .section-2-heading {
+    font-size: 8rem;
+  }
+
+  .section-3-heading {
+    font-size: 8rem;
+  }
+
+  .macbook-info-heading {
+    font-size: 5rem;
+  }
+
+  .macbook-btn {
+    width: 15rem;
+    height: 3rem;
+    font-size: 1.3rem;
+  }
+
+  .airpods-buttons {
+    width: 50rem;
+    text-align: center;
+  }
+
+  .icon-link img {
+    width: 8rem;
+  }
+}
+footer {
+  width: 100%;
+  height: 40vh;
+  position: relative;
+  overflow: hidden;
+}
+
+.icon-link {
+  margin: 0 5rem;
+}
+
+.icon-link img {
+  width: 10rem;
+}
+
+.copyright {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+  bottom: 5rem;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
 }
 
 @media (max-width: 450px) {
@@ -568,6 +983,31 @@ html {
 
   .iphones {
     width: 75vw;
+  }
+
+  .section-3-heading {
+    font-size: 6rem;
+  }
+
+  .macbook-info {
+    width: 40rem;
+  }
+
+  .macbook-info-heading {
+    font-size: 3rem;
+  }
+
+  .macbook-price {
+    font-size: 2rem;
+    font-weight: 300;
+  }
+
+  .watch-btn {
+    right: 5%;
+  }
+
+  .icon-link img {
+    width: 6rem;
   }
 }
 /* End of Responsive */
