change customItemSlice to use the reactive dom, have to set all proprieties to obtain the observation

--- a/src/index.css
+++ b/src/index.css
@@ -439,7 +439,7 @@ hr {
   width: 35rem;
   height: 35rem;
 }
-.form-products form {
+.custom-items-container {
   position: absolute;
   top: 20vh;
   right: 5vw;
